feat(pms22): make cleaning calendar named-stay only
